--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,14 +7,18 @@ permissions:
   packages: write
 
 jobs:
-  build-and-pubish:
-    runs-on: ubuntu-24.04
+  build-and-publish:
+    strategy:
+      matrix:
+        include:
+          - runner: ubuntu-24.04
+            platform: linux/amd64
+          - runner: ubuntu-24.04-arm
+            platform: linux/arm64
+    runs-on: ${{ matrix.runner }}
     steps:
       - name: Checkout
         uses: actions/checkout@v6
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Buildah Build
         id: build-container
@@ -25,7 +29,7 @@ jobs:
           image: ${{github.event.repository.full_name}}
           tags: latest ${{ github.sha }}
           oci: true
-          platforms: linux/amd64, linux/arm64
+          platforms: ${{ matrix.platform }}
 
       - name: Push To Registry
         id: push-to-registry
